refactoring language switcher, fix issue of invisible selected lang on ios

--- a/src/widgets/components/language-switcher/LanguageSwitcher.scss
+++ b/src/widgets/components/language-switcher/LanguageSwitcher.scss
@@ -1,10 +1,8 @@
 @use "styles/mixins.scss" as mixins;
 
 .language-switcher {
-  &.MuiInputBase-root {
-    height: 34px;
-    width: calc(100% - 34px);
-  }
+  height: 30px;
+  width: calc(100% - 34px);
 
   .MuiSelect-select {
     font-size: 16px;
@@ -21,15 +19,15 @@
       }
     }
 
-    .MuiSelect-nativeInput {
-      height: 100%;
-    }
-
-    &.MuiInputBase-root {
+    .MuiInputBase-root {
       height: 30px;
       width: 30px;
       border-radius: 10px;
       color: rgb(var(--dark-accent-color));
+    }
+
+    .MuiSelect-nativeInput {
+      height: 100%;
     }
 
     .MuiOutlinedInput-notchedOutline {
